--- a/index.html
+++ b/index.html
@@ -2,13 +2,13 @@
 <html>
 <head>
 	<meta charset="utf-8">
-	<title>jQuery One Page Nav</title>
+	<title>NinoX Human Resource</title>
 	<link href="demo.css" rel="stylesheet" media="all">
 </head>
 
 <body>
 	<ul id="nav">
-		<li class="current"><a href="#intro">Intro</a></li>
+		<li class="current"><a href="#intro">Introduction</a></li>
 		<li><a href="#usage">Usage</a></li>
 		<li><a href="#options">Options</a></li>
 		<li><a href="#examples">Examples</a></li>
@@ -16,7 +16,7 @@
 
 	<div id="container">
 		<div class="section" id="intro">
-			<h1>jQuery One Page Nav</h1>
+			<h1>NinoX Human Resource</h1>
 
 			<p>A lightweight jQuery plugin for the navigation on one-page sites. Adds smooth scrolling when clicking on the navigation and automatically selects the correct navigation items as you are scrolling through the different sections.</p>
 
