--- a/index.html
+++ b/index.html
@@ -15,12 +15,12 @@
 	</ul>
 
 	<div id="container">
-		<div class="section" id="intro">
+		<div class="section" id="introduction">
 			<h1>NinoX Human Resource</h1>
 
 			<p>A lightweight jQuery plugin for the navigation on one-page sites. Adds smooth scrolling when clicking on the navigation and automatically selects the correct navigation items as you are scrolling through the different sections.</p>
 
-			<p><a href="https://github.com/davist11/jQuery-One-Page-Nav">GitHub Repo</a></p>
+			<p><a href="https://github.com/NinoX-Cyber/hr">GitHub Repo</a></p>
 		</div>
 
 		<div class="section" id="usage">
