--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
 <head>
 	<meta charset="utf-8">
-	<title>NinoX Human Resource</title>
+	<title>NinoX Portal</title>
 	<link href="demo.css" rel="stylesheet" media="all">
 </head>
 
@@ -15,8 +15,8 @@
 	</ul>
 
 	<div id="container">
-		<div class="section" id="introduction">
-			<h1>NinoX Human Resource</h1>
+		<div class="section" id="intro">
+			<h1>NinoX Introduction</h1>
 
 			<p>A lightweight jQuery plugin for the navigation on one-page sites. Adds smooth scrolling when clicking on the navigation and automatically selects the correct navigation items as you are scrolling through the different sections.</p>
 
