--- a/index.html
+++ b/index.html
@@ -9,8 +9,8 @@
 <body>
 	<ul id="nav">
 		<li class="current"><a href="#intro">Introduction</a></li>
-		<li><a href="#usage">Usage</a></li>
-		<li><a href="#options">Options</a></li>
+		<li><a href="#env">Enviroment</a></li>
+		<li><a href="#hr">HR</a></li>
 		<li><a href="#examples">Examples</a></li>
 	</ul>
 
@@ -22,38 +22,31 @@
 
 			<p><a href="https://github.com/NinoX-Cyber/hr">GitHub Repo</a></p>
 		</div>
+		
+		
 
-		<div class="section" id="usage">
-			<h2>Usage</h2>
-
-			<pre>$(document).ready(function() {
-	$('#nav').onePageNav();
-});</pre>
-
-			<h3>Markup</h3>
-
-			<pre>&lt;ul id="nav">
-	&lt;li class="current">&lt;a href="#intro">Intro&lt;/a>&lt;/li>
-	&lt;li>&lt;a href="#usage">Usage&lt;/a>&lt;/li>
-	&lt;li>&lt;a href="#examples">Examples&lt;/a>&lt;/li>
-&lt;/ul></pre>
-		</div>
-
-		<div class="section" id="options">
-			<h2>Options</h2>
-
+		<div class="section" id="env">
 			<ul>
-				<li><strong>currentClass</strong>: Class to add to the nav to indicate the current item. Defaults to <em>current</em>.</li>
-				<li><strong>changeHash</strong>: Whether you want to change the hash when a user clicks on the nav. Defaults to <em>false</em>.</li>
-				<li><strong>scrollSpeed</strong>: Speed at which the page will scroll upon clicking on the nav. Defaults to <em>750</em>.</li>
-				<li><strong>scrollThreshold</strong>: Percentage of screen at which the next section should become current. Defaults to <em>0.5</em>.</li>
-				<li><strong>filter</strong>: Selector of links to filter out of one page nav functionality.</li>
-				<li><strong>easing</strong>: Easing method. Defaults to <em>swing</em>.</li>
-				<li><strong>begin</strong>: Function to call when the scrolling starts.</li>
-				<li><strong>end</strong>: Function to call when the scrolling ends.</li>
-				<li><strong>scrollChange</strong>: Function to call when you enter a section. The current nav item gets passed in.</li>
+			  <li>系統環境建置文件</li>
+			  <ul>
+			    <li><a href = "OS-backup_update.html">MAC Enviroment</a></li>
+			  </ul>  
+			</ul>	
+		</div>
+		
+		
+		
+
+		<div class="section" id="HR">
+			<ul>
+			  <li>電子表單</li>
+			  <ul>
+			    <li><a href = "https://docs.google.com/forms/d/e/1FAIpQLSciiBNRHMAMhEqYVRjfzRGbO7ZWmlGtUZ597dzsQz8Uh0AW7Q/viewform">請假</a></li>
+			  </ul>
 			</ul>
 		</div>
+		
+		
 
 		<div class="section" id="examples">
 			<h2>Examples</h2>
