--- a/index.html
+++ b/index.html
@@ -27,24 +27,20 @@
 		
 
 		<div class="section" id="env">
-			<ul>
-			  <li>系統環境建置文件</li>
+			<h2>系統環境建置文件</h2>
 			  <ul>
 			    <li><a href = "OS-backup_update.html">MAC Enviroment</a></li>
 			  </ul>  
-			</ul>	
 		</div>
 		
 		
 		
 
 		<div class="section" id="hr">
-			<ul>
-			  <li>電子表單</li>
+			<h2>電子表單</h2>
 			  <ul>
 			    <li><a href = "https://docs.google.com/forms/d/e/1FAIpQLSciiBNRHMAMhEqYVRjfzRGbO7ZWmlGtUZ597dzsQz8Uh0AW7Q/viewform">請假</a></li>
 			  </ul>
-			</ul>
 		</div>
 		
 		
