--- a/index.html
+++ b/index.html
@@ -10,9 +10,9 @@
 <body>
 	<ul id="nav">
 		<li class="current"><a href="#intro">Introduction</a></li>
-		<li><a href="#env">Enviroment</a></li>
-		<li><a href="#hr">HR</a></li>
-		<li><a href="#examples">Examples</a></li>
+		<li><a href="#td">Training Documents</a></li>
+		<li><a href="#wf">Workflow</a></li>
+		<li><a href="#ct">Contact</a></li>
 	</ul>
 
 	<div id="container">
@@ -26,8 +26,8 @@
 		
 		
 
-		<div class="section" id="env">
-			<h2>系統環境建置文件</h2>
+		<div class="section" id="td">
+			<h2>Training Documents</h2>
 			<ul>
 			    	<li><a href = "OS-backup_update.html">MAC Enviroment</a></li>
 			</ul>  
@@ -36,8 +36,8 @@
 		
 		
 
-		<div class="section" id="hr">
-			<h2>電子表單</h2>
+		<div class="section" id="wf">
+			<h2>Workflow</h2>
 			<ul>
 			    	<li><a href = "https://docs.google.com/forms/d/e/1FAIpQLSciiBNRHMAMhEqYVRjfzRGbO7ZWmlGtUZ597dzsQz8Uh0AW7Q/viewform">請假</a></li>
 			</ul>
@@ -45,8 +45,8 @@
 		
 		
 
-		<div class="section" id="examples">
-			<h2>Examples</h2>
+		<div class="section" id="ct">
+			<h2>Contact</h2>
 
 			<ul>
 				<li><a href="filter.html">Filter out links</a></li>
