--- a/index.html
+++ b/index.html
@@ -19,7 +19,14 @@
 		<div class="section" id="intro">
 			<h1>NinoX Introduction</h1>
 
-			<p>A lightweight jQuery plugin for the navigation on one-page sites. Adds smooth scrolling when clicking on the navigation and automatically selects the correct navigation items as you are scrolling through the different sections.</p>
+			<p>
+			Company vision and mission
+
+			We use software technology to implement the results of imagination, turn intangible imagination into tangible, and bring value enhancement, 
+			and by continuously improving the ability of the team, we can achieve breakthrough and surpass ourselves.		
+			
+			
+			</p>
 
 			<p><a href="https://github.com/NinoX-Cyber/hr">GitHub Repo</a></p>
 		</div>
