--- a/index.html
+++ b/index.html
@@ -21,7 +21,9 @@
 
 			<p>
 			Company vision and mission
-
+				
+			Everlasting pursuit of imagination 
+				
 			We use software technology to implement the results of imagination, turn intangible imagination into tangible, and bring value enhancement, 
 			and by continuously improving the ability of the team, we can achieve breakthrough and surpass ourselves.		
 			
