--- a/index.html
+++ b/index.html
@@ -21,10 +21,10 @@
 			
 			
 			<p>
-				Company vision and mission
+				<h3>Company vision and mission</h3>
 			</p>
 			<ul>
-				Everlasting pursuit of imagination
+				<h5>Everlasting pursuit of imagination</h5>
 			</ul>
 	
 			<ul>
