--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
 				<h3>Company vision and mission</h3>
 			</p>
 			<ul>
-				<h5>Everlasting pursuit of imagination</h5>
+				<l><h5>Everlasting pursuit of imagination</h5></l>
 			</ul>
 	
 			<ul>
