--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
 				<h3>Company vision and mission</h3>
 			</p>
 			<ul>
-				<h5><i>Everlasting pursuit of imagination</i></h5>
+				<u>Everlasting pursuit of imagination</u>
 			</ul>
 	
 			<ul>
