--- a/index.html
+++ b/index.html
@@ -21,10 +21,10 @@
 			
 			
 			<p>
-				<h3>Company vision and mission</h3>
+				<h2>Company vision and mission</h2>
 			</p>
 			<ul>
-				<u>Everlasting pursuit of imagination</u>
+				<h5><i>Everlasting pursuit of imagination</i><h5>
 			</ul>
 	
 			<ul>
