--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
 			
 			
 			<p>
-				<h2>Company vision and mission</h2>
+				<h2>Company Mission</h2>
 			</p>
 			<ul>
 				<h5><i>Everlasting pursuit of imagination</i><h5>
