--- a/index.html
+++ b/index.html
@@ -58,12 +58,18 @@
 
 		<div class="section" id="ct">
 			<h2>Contact</h2>
-
+			
 			<ul>
-				<li><a href="filter.html">Filter out links</a></li>
-				<li><a href="hash.html">Change hash</a></li>
-				<li><a href="top.html">Horizontal Nav</a></li>
+				<li>
+					<ul>HR</ul>
+					<ul>Tel:0910-740732				
+				</li>
+				<li>Sales
+				
+				</li>		
+
 			</ul>
+
 		</div>
 	</div>
 
