--- a/index.html
+++ b/index.html
@@ -60,14 +60,8 @@
 			<h2>Contact</h2>
 			
 			<ul>
-				<li>
-					<ul>HR</ul>
-					<ul>Tel:0910-740732				
-				</li>
-				<li>Sales
-				
-				</li>		
-
+				<li>Customer Service  Email :ninox.cyber@gmail.com </li>
+				<li>Sales  Email :you1107@ms17.hinet.net</li>	
 			</ul>
 
 		</div>
