--- a/index.html
+++ b/index.html
@@ -60,8 +60,12 @@
 			<h2>Contact</h2>
 			
 			<ul>
-				<li>Customer Service  Email :ninox.cyber@gmail.com </li>
-				<li>Sales  Email :you1107@ms17.hinet.net</li>	
+				<li>Customer Service  
+					<p>Email :ninox.cyber@gmail.com </p>
+				</li>
+				<li>Sales  
+					<p>Email :you1107@ms17.hinet.net</p>
+				</li>	
 			</ul>
 
 		</div>
