--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
 		<div class="section" id="wf">
 			<h2>Workflow</h2>
 			<ul>
-			    	<li><a href = "https://docs.google.com/forms/d/e/1FAIpQLSciiBNRHMAMhEqYVRjfzRGbO7ZWmlGtUZ597dzsQz8Uh0AW7Q/viewform">請假</a></li>
+			    	<li><a href = "https://docs.google.com/forms/d/e/1FAIpQLSciiBNRHMAMhEqYVRjfzRGbO7ZWmlGtUZ597dzsQz8Uh0AW7Q/viewform">Leave form</a></li>
 			</ul>
 		</div>
 		
