--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 <body>
 	<ul id="nav">
 		<li class="current"><a href="#intro">Introduction</a></li>
-		<li><a href="#td">Training Documents</a></li>
+		<li><a href="#doc">Documents</a></li>
 		<li><a href="#wf">Workflow</a></li>
 		<li><a href="#ct">Contact</a></li>
 	</ul>
@@ -37,11 +37,14 @@
 		
 		
 
-		<div class="section" id="td">
-			<h2>Training Documents</h2>
+		<div class="section" id="doc">
+			<p><h2>Training Documents</h2></p>
 			<ul>
 			    	<li><a href = "OS-backup_update.html">MAC Enviroment</a></li>
 			</ul>  
+			
+			<p><h2>Template Documents</h2></p>
+			
 			<ul>
 			    	<li><a href = "NinoX_Kanban-Board_Template.xlsx">Kanban TimeSheet</a></li>
 			</ul>  
