--- a/index.html
+++ b/index.html
@@ -38,15 +38,16 @@
 		
 
 		<div class="section" id="doc">
-			<p><h2>Training Documents</h2></p>
+			<p><h2>Documents</h2></p>
 			<ul>
-			    	<li><a href = "OS-backup_update.html">MAC Enviroment</a></li>
+				<li>Tranining</li>
+				<a href = "OS-backup_update.html">MAC Enviroment</a>				
 			</ul>  
 			
-			<p><h2>Template Documents</h2></p>
-			
+						
 			<ul>
-			    	<li><a href = "NinoX_Kanban-Board_Template.xlsx">Kanban TimeSheet</a></li>
+			    	<li>Template</li>
+				<a href = "NinoX_Kanban-Board_Template.xlsx">Kanban TimeSheet</a>
 			</ul>  
 		</div>
 		
