--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
 		<div class="section" id="intro">
 			<h1>NinoX Introduction</h1>			
 			
-			<p><h2>Company Mission</h2></p>
+			<p><h2>Company Vision</h2></p>
 		
 			<ul>
 				<h5><i>Everlasting pursuit of imagination</i><h5>
