--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
 			<p><h2>Company Vision</h2></p>
 		
 			<ul>
-				<h5><i>Everlasting pursuit of imagination</i><h5>
+				<h5><i>Everlasting pursuit of creative imagination</i><h5>
 			</ul>
 	
 			<ul>
