--- a/index.html
+++ b/index.html
@@ -41,7 +41,9 @@
 					<p><a href = "OS-backup_update.html">MAC Enviroment</a></>
 					
 			    	<li>Template</li>
+					<p><a href = "NinoX_Kanban-Board_Template.xlsx">PPT Template</a></p>
 					<p><a href = "NinoX_Kanban-Board_Template.xlsx">Kanban TimeSheet</a></p>
+
 			</ul>  
 		</div>
 		
