--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
 					<p><a href = "OS-backup_update.html">MAC Enviroment</a></>
 					
 			    	<li>Template</li>
-					<p><a href = "NinoX Template.ppt">PPT Template</a>
+					<p><a href = "NinoX Template.ppt">PPT Template</a>NinoX PowerPoint Template
 					<p><a href = "NinoX_Kanban-Board_Template.xlsx">Kanban TimeSheet</a>
 
 			</ul>  
