--- a/index.html
+++ b/index.html
@@ -41,8 +41,8 @@
 					<p><a href = "OS-backup_update.html">MAC Enviroment</a></>
 					
 			    	<li>Template</li>
-					<p><a href = "NinoX Template.ppt">PPT Template</a>NinoX PowerPoint Template
-					<p><a href = "NinoX_Kanban-Board_Template.xlsx">Kanban TimeSheet</a>
+					<p><a href = "NinoX Template.ppt">NinoX PowerPoint </a>
+					<p><a href = "NinoX_Kanban-Board_Template.xlsx">NinoX_Kanban-Board </a>
 
 			</ul>  
 		</div>
