--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
 					<p><a href = "OS-backup_update.html">MAC Enviroment</a></>
 					
 			    	<li>Template</li>
-					<p><a href = "NinoX Template.ppt">NinoX PowerPoint </a>
+					<p><a href = "NinoX Template ver 0.5.ppt">NinoX PowerPoint </a>
 					<p><a href = "NinoX_Kanban-Board_Template.xlsx">NinoX_Kanban-Board </a>
 
 			</ul>  
