--- a/index.html
+++ b/index.html
@@ -9,14 +9,14 @@
 
 <body>
 	<ul id="nav">
-		<li class="current"><a href="#intro">Introduction</a></li>
+		<li class="current"><a href="#home">Home</a></li>
 		<li><a href="#doc">Documents</a></li>
 		<li><a href="#wf">Workflow</a></li>
 		<li><a href="#ct">Contact</a></li>
 	</ul>
 
 	<div id="container">
-		<div class="section" id="intro">
+		<div class="section" id="home">
 			<h1>NinoX Introduction</h1>			
 			<p><h2>Company Vision</h2></p>
 		
