--- a/index.html
+++ b/index.html
@@ -18,15 +18,22 @@
 	<div id="container">
 		<div class="section" id="home">
 			<h1>NinoX Introduction</h1>			
+			
 			<p><h2>Company Vision</h2></p>
 		
+			<ul>				
+				<h5><i>Secure Networking Automation in IoT</i><h5>
+			</ul>		
+
+
+			<p><h2>Company Mission</h2></p>	
+
 			<ul>
-				<h5><i>Everlasting pursuit of creative imagination</i><h5>
+				<h5><i>Everlasting pursuit of creative imagination</i><h5> 
 			</ul>
-	
+				
 			<ul>
-			We use software technology to implement the results of imagination, turn intangible imagination into tangible, and bring value enhancement, 
-			and by continuously improving the ability of the team, we can achieve breakthrough and surpass ourselves.
+				We are passion for playing imagination to solve the needs of the world by continuously improving the ability of ourself.
 			</ul>
 
 
