--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 
 	<div id="container">
 		<div class="section" id="home">
-			<h1>NinoX Enterprise Portal</h1>			
+			<h1>NinoX Enterprise Information Portal</h1>			
 			
 			<p><h2>Company Vision</h2></p>
 		
