--- a/index.html
+++ b/index.html
@@ -8,6 +8,12 @@
 	
 
 <body>
+	
+	<table>
+		<tr>
+		</tr>
+	</table>
+	
 	<ul id="nav">
 		<li class="current"><a href="#home">Home</a></li>
 		<li><a href="#doc">Documents</a></li>
