--- a/index.html
+++ b/index.html
@@ -10,8 +10,11 @@
 <body>
 	
 	<table>
-		<tr>
-		</tr>
+		  <tr>
+		    <th>Item</th>
+		    <th>Price</th>
+		    <th>Quantity</th>
+		  </tr>
 	</table>
 	
 	<ul id="nav">
