--- a/index.html
+++ b/index.html
@@ -19,6 +19,7 @@
 
 	<div id="container">
 		<div class="section" id="home">
+			<table  bgcolor="black" cellpadding="5" border="0" >
 			<h1>NinoX Enterprise Portal</h1>			
 			
 			<p><h2>Company Vision</h2></p>
@@ -37,7 +38,8 @@
 			<ul>
 				We are passion for playing imagination to solve the needs of the world by continuously improving the ability of ourself.
 			</ul>
-
+					
+			</table>
 
 		</div>
 		
