--- a/index.html
+++ b/index.html
@@ -19,7 +19,14 @@
 
 	<div id="container">
 		<div class="section" id="home">
-			<table  bgcolor="black" cellpadding="5" border="0" >
+			<table style="background-color:black;" cellpadding="5" border="0">
+			<tr>
+			 <td style="background-color:red">紅色的表格欄位背景顏色</td>
+			 <td style="background-color:yellow">黃色的表格欄位背景顏色</td>
+			 <td style="background-color:blue">藍色的表格欄位背景顏色</td>
+			</tr>
+			</table>
+			
 			<h1>NinoX Enterprise Portal</h1>			
 			
 			<p><h2>Company Vision</h2></p>
@@ -39,7 +46,7 @@
 				We are passion for playing imagination to solve the needs of the world by continuously improving the ability of ourself.
 			</ul>
 					
-			</table>
+
 
 		</div>
 		
