adding jdk downloads

--- a/JavaSpringMicroservice.html
+++ b/JavaSpringMicroservice.html
@@ -249,7 +249,7 @@ div.tocify {
 <div id="setup" class="section level1">
 <h1>1 Setup</h1>
 <p>This demo project is to demonstrate the use of basic functionality of Eclipse and docker to develop a fast-deliverable stand-alone Spring-based application. The technology used in the development of Java web application will be Spring Framework which includes Spring Boot and Spring Cloud. So before proceed to the next section, make sure install Eclipse and docker in your local environment. Since this demo is focus on the building of the project and not on actual coding, the source will be on <a href="https://github.com/hhuangpen/java-spring-demo/tree/main">github</a>. Again, for the purpose of building this project, I recommend not download the entire package rather just specific files or even copy code and paste to where needs be. Build the thing from ground up by yourself.</p>
-<p>** We will be using Java 8 so install JDK 8 which contains a compatible JRE for Eclipse, although Java 11 might be fine as well but has not been tested.</p>
+<p>** We will be using Java 8 so install JDK 8 which contains a compatible JRE for Eclipse, although Java 11 might be fine as well but has not been tested. Here is a website for download: <a href="https://adoptopenjdk.net" class="uri">https://adoptopenjdk.net</a></p>
 </div>
 <div id="code-build" class="section level1">
 <h1>2 Code Build</h1>
