--- a/JavaSpringMicroservice.html
+++ b/JavaSpringMicroservice.html
@@ -304,7 +304,7 @@ Dependencies
 currency-exchange-service
 </td>
 <td style="text-align:left;">
-Spring Boot Actuator, Spring Web, Spring Data JPA, H2 Database, Spring Boot DevTools, Eureka Discovery Client
+Spring Boot Actuator, Spring Boot DevTools, Eureka Discovery Client, Spring Web, Spring Data JPA, H2 Database
 </td>
 </tr>
 <tr>
@@ -312,7 +312,7 @@ Spring Boot Actuator, Spring Web, Spring Data JPA, H2 Database, Spring Boot DevT
 currency-conversion-service
 </td>
 <td style="text-align:left;">
-Spring Boot Actuator, Spring Web, Spring Boot DevTools, OpenFeign, Ribbon, Eureka Discovery Client
+Spring Boot Actuator, Spring Boot DevTools, Eureka Discovery Client, Spring Web, OpenFeign, Ribbon
 </td>
 </tr>
 <tr>
@@ -382,15 +382,6 @@ Spring Boot Actuator, Spring Boot DevTools, Eureka Discovery Client, Zuul
 <p><strong>Eureka</strong>:</p>
 <ul>
 <li><a href="http://localhost:8761/">http://localhost:8761/</a></li>
-</ul>
-<p><strong>Currency Exchange Service</strong>:</p>
-<ul>
-<li><a href="http://localhost:8000/currency-exchange/from/USD/to/TWD">http://localhost:8000/currency-exchange/from/USD/to/TWD</a></li>
-</ul>
-<p><strong>Currency Conversion Service</strong>:</p>
-<ul>
-<li><p><a href="http://localhost:8100/currency-converter/from/USD/to/TWD/quantity/10">http://localhost:8100/currency-converter/from/USD/to/TWD/quantity/10</a></p></li>
-<li><p><a href="http://localhost:8100/currency-converter-feign/from/USD/to/TWD/quantity/10">http://localhost:8100/currency-converter-feign/from/USD/to/TWD/quantity/10</a></p></li>
 </ul>
 <p><strong>API Gateway</strong>:</p>
 <ul>
